v0.0.6
Cleaned up a few things, made it so whenever data is loading, a message will appear